--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn -B clean package --file pom.xml
+      run: mvn clean package
       working-directory: .
 
     - name: Run simulation
