--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
       working-directory: .
-
+    
+    - name: install with Maven
+      run: mvn clean install
+      working-directory: .
     - name: Run simulation
       run: mvn exec:java -pl modules/cloudsim-examples/ -Dexec.mainClass=org.cloudbus.cloudsim.examples.CustomerWorkloadSimulation
       working-directory: .
